# NovaChat

./: .clang-format  .dockerignore  CMakeLists.txt  Dev.md  Dockerfile  Gateway.md  NovaChat.md  ProjectDiscription.md  README.md  bRPC-internals.md  docker-compose.yml
cmake/: ProtoGen.cmake
docs/: interview-qa.md
docs/gateway/: auth-middleware.md  brpc-client.md  config.md  health-routes.md  jwt.md  keys.md  logger.md  main.md  push-routes.md  rate-limiter.md  service-registry.md  session.md  user-client.md  user-routes.md  ws-connection.md  ws-protocol.md
docs/proto/: common-proto.md  push-proto.md  user-proto.md
docs/scripts/: docker-build.md  mock-user-service.md  proto-gen.md
docs/services/: common.md  config.md  logger.md  mysql-pool.md  redis-client.md  snowflake.md  user-brpc-stub.md  user-dao.md  user-server.md  user-service-impl.md
gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
gateway/src/: main.ts
gateway/src/auth/: jwt.ts  keys.ts  session.ts
gateway/src/clients/: base.ts  service_registry.ts  user_client.ts
gateway/src/config/: index.ts
gateway/src/middleware/: auth.ts  rate_limiter.ts
gateway/src/routes/: health.ts  push.ts  user.ts
gateway/src/utils/: logger.ts
gateway/src/ws/: connection.ts  protocol.ts
proto/nova/common/: common.proto
proto/nova/gateway/: push.proto
proto/nova/user/: user.proto
scripts/: docker-build.sh  proto-gen.sh
scripts/mock-user-service/: package-lock.json  package.json  server.js
services/common/: CMakeLists.txt
services/common/include/nova/: common.h  config.h  logger.h  mysql_pool.h  redis_client.h  snowflake.h
services/common/src/: config.cpp  logger.cpp  mysql_pool.cpp  redis_client.cpp  snowflake.cpp
services/user-service/: CMakeLists.txt  server.cc  user.brpc.cc  user.brpc.h  user_dao.cc  user_dao.h  user_service_impl.cc  user_service_impl.h
services/user-service/conf/: user_service.flags
